# keras2cOO

./: README.md  keras2cpp_issues
Rounds_Rec/Test_MLP_ACK_SND_RTT/: CMakeLists.txt  main.cpp
Rounds_Rec/Test_MLP_ACK_SND_RTT/Keras2c/: CMakeLists.txt
Rounds_Rec/Test_MLP_ACK_SND_RTT/Keras2c/header/: Model.h  k2c_include.h  keras2c_model_MLP.h
Rounds_Rec/Test_MLP_ACK_SND_RTT/Keras2c/src/: k2c_activations.cpp  k2c_convolution_layers.cpp  keras2c_model_MLP.cpp
Rounds_Rec/Test_MLP__SND_ACK/: .~lock.testkeras2cMLP_Send_ewma_RTT_ratio.csv#  CMakeLists.txt  main.cpp  testkeras2cMLP_ACK_ewma_Send_ewma_RTT_ratio.txt  testkeras2cMLP_Send_ewma_RTT_ratio.csv
Rounds_Rec/Test_MLP__SND_ACK/Keras2c/: CMakeLists.txt
Rounds_Rec/Test_MLP__SND_ACK/Keras2c/header/: keras2c_model_MLP_SND_RTT.h
Rounds_Rec/Test_MLP__SND_ACK/Keras2c/src/: k2c_core_layers.cpp  k2c_embedding_layers.c  k2c_helper_functions.c  k2c_merge_layers.c  k2c_normalization_layers.cpp  k2c_pooling_layers.cpp  k2c_recurrent_layers.cpp  keras2c_model_MLP_SND_RTT.cpp
Rounds_Rec/Test_MLP__SND_ACK/testKeras2C/: .~lock.train.csv#  testkeras2cMLP_Send_ewma_RTT_ratio_generalization_reno_20fluxos.csv  testkeras2cMLP_Send_ewma_RTT_ratio_train.txt
Rounds_Rec/Test_MLP__SND_ACK/testKeras2C/test_fail/: keras2c_model.c  keras2c_model_test_suite.c  testkeras2cMLP_Send_ewma_RTT_ratio_generalization_reno_20fluxos.txt  testkeras2cMLP_Send_ewma_RTT_ratio_train.txt
keras2c/: keras2c_model.c  keras2c_model_test_suite  keras2c_model_test_suite.c
keras2c/Classes/: defines.h  kerasarray_CNN.txt  kerasarray_CNN_ACK_RTT.txt  test  (+4 more)
(+67 files in other folders)
